--- a/style.css
+++ b/style.css
@@ -279,7 +279,39 @@ div h2 {
 
 .wrapper {
     width: 1000px;
-    margin: 0 auto 0 100px;
-    background-color: red;
+    margin: 0 auto;
+    /* background-color: red; */
+    background-image: url(./img/passportSize.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center, left;
 
+
+}
+
+.img {
+    width: 500px;
+
+}
+
+video {
+    width: 100%;
+}
+
+.video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0px;
+    overflow: hidden;
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
 }
