--- a/style.css
+++ b/style.css
@@ -315,3 +315,44 @@ video {
     width: 100%;
     height: 100%;
 }
+
+.wrap2 {
+    width: 100%;
+}
+
+.img-banner {
+    display: none;
+}
+
+.info {
+    width: 100%;
+}
+
+.info h2 {
+    padding: 30px 30px 20px;
+    font-size: 50px;
+    font-family: Arial;
+    color: #111;
+    line-height: 44px;
+}
+
+.info p {
+    padding: 0px 30px 20px;
+    font-size: 16px;
+    font-family: Arial;
+    color: #111;
+    line-height: 24px;
+}
+
+.img-me {
+    width: 100%;
+}
+
+@media only screen and (min-width:768) {
+    .img-banner {
+        display: block;
+        width: 100%;
+        padding-bottom: 30px;
+    }
+
+}
