--- a/style.css
+++ b/style.css
@@ -274,9 +274,17 @@ div h2 {
 }
 
 .Nav-bar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
     width: 100%;
     height: 100px;
     background-color: #fff;
+}
+
+main {
+    padding-top: 100px;
 }
 
 .wrapper {
