added new responsive footer

--- a/style.css
+++ b/style.css
@@ -567,3 +567,34 @@ footer ul li a {
     margin-bottom: 10px;
     padding-bottom: 10px;
 }
+
+/* FARAJI */
+footer .container {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5em;
+}
+
+footer .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    font-size: 2rem;
+
+    color: gray;
+    fill: gray;
+}
+
+footer .footer-link:hover {
+    color: white;
+    fill: white;
+    cursor: pointer;
+}
