--- a/style.css
+++ b/style.css
@@ -582,6 +582,12 @@ footer .container {
     gap: 1.5em;
 }
 
+@media screen and (max-width: 500px) {
+    footer .container {
+        flex-direction: column;
+    }
+}
+
 footer .footer-link {
     display: flex;
     align-items: center;
