--- a/style.css
+++ b/style.css
@@ -519,7 +519,8 @@ header .header-case {
         margin: 0 auto;
     }
 
-    .index-links div {
+    /* SHAFIQ */
+    /* .index-links div {
         margin: 16px 16px 0;
         height: 230px;
         background-color: #f2f2f2;
@@ -527,6 +528,37 @@ header .header-case {
 
     .index-topic-square {
         width: calc(25%-20px) !important;
+    } */
+
+    /* FARAJI */
+    /* grid */
+    .index-links {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .index-links a:nth-child(1) {
+        grid-column: 1/2;
+    }
+
+    .index-links a:nth-child(2) {
+        grid-column: 2/4;
+    }
+
+    .index-links a:nth-child(3) {
+        grid-column: 4/5;
+    }
+
+    .index-links a:nth-child(4) {
+        grid-column: 1/3;
+    }
+
+    .index-links a:nth-child(5) {
+        grid-column: 3/4;
+    }
+
+    .index-links a:nth-child(6) {
+        grid-column: 4/5;
     }
 
     .inde-topic-rectangle {}
